<resources>
    <string name="app_name">hotpleGO</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">게시판</string>
    <string name="title_notifications">코스</string>
    <string name="title_reservation">예약</string>
    <string name="title_MyPage">마이페이지</string>
    <string name="my_point">20000원</string>
    <string name="move_position">이동 위치</string>
    <string name="move_time">이동 시간</string>
    <string name="save_point">20원</string>
    <string name="bd_title">게시글 제목</string>
    <string name="my_location">유저 위치</string>
    <string name="hotplace_1st">1위 핫플 장소</string>
    <string name="intro_1st">1위 핫플 설명</string>
    <string name="position_1st">1위 핫플 위치</string>
    <string name="hotplace_2st">2위 핫플 장소</string>
    <string name="intro_2st">2위 핫플 설명</string>
    <string name="position_2st">2위 핫플 위치</string>
    <string name="bd_cont">게시글 내용</string>
    <string name="com_cont">댓글 내용</string>
    <string name="saving_point">20p</string>
    <string name="total"><b>1,234,000원</b></string>
    <string name="break_time">임시중지시간: </string>
    <string name="avg_sales">평균 매출 </string>
    <string name="best_sales">최고 매출액 </string>
    <string name="worst_sales">최저 매출액</string>
    <string name="totla_sales">총 매출</string>
    <string name="order_details">주문내역</string>
    <string name="re_cont">리뷰 내용</string>
    <string name="New">신규처리중</string>
    <string name="complete">완료</string>
    <string name="order_time">20:30</string>
    <string name="order_me">육회비빔밥 2개 외 1개</string>
    <string name="order_pay">27,000원</string>
    <string name="review">리뷰 조회</string>
    <string name="re_owner_cont">업체 답변</string>
    <string name="rating">평균 평점</string>
    <string name="read_count">조회수</string>
    <string name="comm_num">댓글 수</string>
    <string name="recy_num">추천 수</string>
    <string name="recn_num">비추 수</string>
    <!-- 취향 페이지 -->
    <string name="cs_recommend">취향 설정</string>
    <string name="close">X</string>
    <string name="walk">걷기</string>
    <string name="watch">보기</string>
    <string name="play">놀기</string>
    <string name="alcohol">음주</string>
    <string name="dessert">디저트</string>
    <string name="food">먹기</string>
    <string name="up_mark">▲</string>
    <string name="down_mark">▼</string>
    <string name="save_taste">취향 저장</string>
    <!-- 마이페이지 -->
    <string name="myInfo">마이 페이지</string>
    <string name="email">이메일</string>
    <string name="password">패스워드 재설정</string>
    <string name="nick">닉네임</string>
    <string name="pw">비밀번호</string>
    <string name="point">내 포인트</string>
    <string name="phone">전화번호</string>
    <string name="birth">생년월일</string>
    <string name="mbti">MBTI</string>
    <string name="reg_date">가입일</string>
    <string name="update">수정</string>
    <string name="bookmark">북마크</string>
    <string name="zzim">찜 목록</string>
    <!-- MBTI -->
    <string name="selected_mbti">당신의 성격 유형을 선택하세요</string>
    <!-- 게시판 -->
    <string name="board_bar">게시글 상세 조회</string>
    <string name="delete">삭제</string>
    <string name="submit">작성</string>
    <!-- 게시판 추가 -->
    <string name="board_add">게시판 작성</string>
    <string name="board_add_hint">내용을 입력해주세요</string>
    <!-- 페이스북 api -->
    <string name="facebook_app_id">496241708387515</string>
    <string name="fb_login_protocol_scheme">fb496241708387515</string>
    <!-- 코스 프래그먼트 -->
    <string name="course_using">이용 중</string>
    <string name="course_making">코스 짜기</string>
    <string name="course_used">이용 내역</string>
    <!-- 코스 짜기 -->
    <string name="course_add">코스 추가</string>
    <!-- 코스 디테일 -->
    <string name="course_use">코스 이용</string>
    <string name="course_delete">코스 삭제</string>
    <string name="dibs">찜하기</string>
    <string name="dibs_delete">찜 삭제하기</string>
    <!-- 예약 -->
    <string name="hotplace_name">핫플 장소</string>
    <string name="hotplace_intro">핫플 설명</string>
    <string name="hotplace_position">핫플 위치</string>
    <string name="proceeding">진행중 장소</string>
    <string name="completed">완료된 장소</string>
    <string name="watch_detail">상세보기</string>
    <string name="watch_review">리뷰보기</string>
    <string name="cancel">환불처리</string>
    <!-- 예약 상세보기 -->
    <string name="res_history">주문 내역</string>
    <string name="price">가격</string>
    <string name="count">수량</string>
    <string name="total_price">총 가격</string>
    <!-- 운영자 메뉴 -->
    <string name="manage_sale">매출 관리</string>
    <string name="manage_menu">메뉴 관리</string>
    <string name="manage">영업 관리</string>
    <string name="manage_hotple">업체 관리</string>
    <!-- 메뉴 -->
    <string name="sh_name">업체 이름</string>
    <string name="sh_addr">업체 주소</string>
    <string name="ri_time">예약 시간</string>
    <string name="ri_cont">예약 내용</string>
    <string name="me_name">메뉴 이름</string>
    <string name="me_price">메뉴 가격</string>
    <string name="hashtag">해시태그</string>
    <string name="rs_me_num">메뉴 수량</string>
    <!-- -->
    <string name="myLocation">내 위치 보기</string>
    <string name="setLocation">현재 위치 설정</string>
</resources>