<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:fontFamily="@font/elandfont"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/res_history" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/elandfont"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/me_price" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/elandfont"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/count" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/elandfont"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/total_price" />
        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/elandfont"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>
</TableLayout>