<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_account_circle_24px" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick"
                android:textColor="#000000"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageButton6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:drawableLeft="@drawable/like_btn"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/recy_num"
                android:textColor="#000000" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageButton7"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:drawableLeft="@drawable/bad_btn"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/recn_num"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView54"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/com_cont"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/com_time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="답글 보기"
                android:textColor="#000000"
                android:minHeight="35dp"
                android:background="@drawable/buttom_custom"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="답글 쓰기"
                android:minHeight="35dp"
                android:textColor="#000000"
                android:background="@drawable/buttom_custom"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="10dp"
        android:background="#8A8A8A" />
</LinearLayout>