<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/customborder">

        <TextView
            android:id="@+id/chart_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 위"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/sh_image"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/board" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hotplace_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hotplace_name"
                android:textSize="20dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/hotplace_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/hotplace_intro"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/hotplace_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hotplace_position"
                android:textSize="18sp"
                android:textColor="#252525"/>
        </LinearLayout>
</LinearLayout>

</LinearLayout>